tests/ui/traits/assoc-type-in-superbad.stderr
error[E0271]: expected `IntoIter<i32>` to be an iterator that yields `u32`, but it yields `i32`
  --> $DIR/assoc-type-in-superbad.rs:12:16
   |
LL |     type Key = u32;
   |                ^^^ expected `u32`, found `i32`
   |
note: required by a bound in `Foo`
  --> $DIR/assoc-type-in-superbad.rs:7:25
   |
LL | pub trait Foo: Iterator<Item = <Self as Foo>::Key> {
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
